--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,13 +6,15 @@
     <script src="index.js"></script>
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>LB - Topics</title>
 </head>
 <body>
     <div id="warning" style="position: absolute; right: 0; bottom: 0; z-index: 1; background-color: #33336650; height: fit-content; width: fit-content; border-radius: 15px; margin: 10px; padding: 10px;">
         <a style="font-size: 24px;" id="warning_title">Thanks for checking this out</a>
         <br><br>
         <a id="warning_text">This is just here for the Design<br>only the "Switch theme" button works :p</a>
+        <br><br>
+        <a id="warning_extra">I tried to honor the original design<br>but I feel the topbar should be revamped<br>also icons never hurt</a>
     </div>
     <div id="container">
         <div id="page">
