--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,7 @@
     <script src="index.js"></script>
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>LB - Topics</title>
 </head>
 <body>
